--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,6 +13,13 @@
   }
 }
 
+.right{
+  position:absolute;
+  right: 0px;
+  /* width: 300px; */
+  padding: 10px;
+}
+
 .App-header {
   background-color: var(--body_background);
   min-height: 100vh;
